# rust-projects

./: README.md
calculate-pi/: Cargo.toml  pi.py
calculate-pi/src/: main.rs
dvd/: Cargo.toml
dvd/src/: main.rs
lemma/: .gitattributes  .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml  test.ipynb
lemma/src/: lib.rs  utils.rs
spongebob_rs/src/: main.rs
