[package]
name = "lemma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lemma"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2"}
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
