[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
authors = [
  {name = "Wayne Lau"},
]
name = "lemma"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "A rust port of lemmatization from wish"
dependencies = [
    "pandas",
    "nltk",
]
[tool.maturin]
features = ["pyo3/extension-module"]
